# phlox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.demo  Dockerfile.dev  Dockerfile.test  Makefile  README.md  build-all.sh  build-server-ollama.sh  build-server.sh  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pyinstaller.spec  release-please-config.json  server.spec  start.sh  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  lint.yml  nightly.yml  release-please.yml
docs/: README.md  architecture.md  credits.md  overview.md  setup.md  warnings.md
docs/features/: ai.md  correspondence.md  task_manager.md  transcription.md
packaging/: com.phlox.app.desktop  com.phlox.app.metainfo.xml  com.phlox.app.yaml
public/: CHANGELOG.md  index.html  manifest.json
server/: _version.py  constants.py  middleware.py  pyproject.toml  requirements-docker.txt  requirements-local.txt  requirements.txt  server.py
server/api/: chat.py  config.py  dashboard.py  letter.py  patient.py  pdf_forms.py  rag.py  templates.py  transcribe.py
server/api/config/: __init__.py  embedding_models.py  global_config.py  local_models.py  mcp.py  models.py  ollama.py  prompts.py  system.py  user.py  validation.py  whisper_models.py
server/chat/: __init__.py  engine.py
server/chat/config/: __init__.py
server/chat/streaming/: __init__.py
server/chat/tools/: __init__.py  accumulator.py  complete_job.py  create_note.py  direct_response.py  executor.py  list_outstanding_jobs.py  literature_search.py  mcp_tool.py  patient_jobs.py  patient_utils.py  pdf_forms.py  previous_encounter.py  pubmed_search.py  registry.py  search_patient.py  search_patient_notes.py  search_patients_by_condition.py  todo_list.py  transcript_search.py  wiki_search.py
server/database/: analysis.py  config.py  connection.py  dashboard.py  initialization.py  jobs.py  letter.py  migrations.py  patient.py  rss.py  templates.py  testing.py  todo.py
server/database/config/: manager.py  mcp_manager.py
server/database/config/defaults/: prompts.py  templates.py
server/database/core/: backup.py  connection.py  initialization.py  migrations.py
server/database/core/migrations/: __init__.py  runner.py  v1_initial_schema.py  v3_config_openai.py  v4_user_settings_and_cleanup.py  v6_patient_profiles.py
server/database/defaults/: letters.py  prompts.py
server/database/entities/: analysis.py  jobs.py  letter.py  patient.py  rss.py  templates.py  todo.py
server/database/repositories/: analysis.py  encounter.py  jobs.py  letter.py  patient.py  patient_search.py  templates.py  todo.py
server/demo/: demo_db.py  example_patients.json
server/llm_client/: __init__.py  client.py
server/mcp/: __init__.py  client.py
server/nlp_tools/: adaptive_refinement.py  document_processing.py  jobs.py  letter.py  reasoning.py  summarisation.py  templates.py
server/pdf_forms/: storage.py
server/rag/: chroma.py  chunking_utils.py  fixed_token_chunker.py  processing.py  progress.py  semantic_chunker.py  vector_store.py
server/rag/backends/: base.py
server/schemas/: chat.py  config.py  dashboard.py  documents.py  grammars.py  image.py  letter.py  patient.py  rag.py  templates.py
server/tests/: conftest.py  test_config.py  test_database.py  test_letter.py  test_patient.py  test_pdf_forms.py  test_rag.py  test_templates.py  test_transcription.py
server/transcription/: __init__.py  audio.py  refinement.py  text.py
server/utils/: adaptive_refinement.py  allocated_ports.py  chat.py  chat_tools.py  document_processing.py  embedding_models.py  helpers.py  letter.py  llama_models.py  llm_client.py  local_ollama.py  local_request_token.py  model_probe.py  rss.py  templates.py  transcription.py  url_utils.py  whisper_models.py
server/utils/chat/: engine.py
server/utils/chat/config/: prompts.py
server/utils/chat/streaming/: response.py
server/utils/chat/tools/: __init__.py  accumulator.py  complete_job.py  create_note.py  direct_response.py  executor.py  list_outstanding_jobs.py  literature_search.py  mcp_tool.py  patient_jobs.py  patient_utils.py  pdf_forms.py  previous_encounter.py  pubmed_search.py  registry.py  sanitization.py  search_patient.py  search_patient_notes.py  search_patients_by_condition.py  todo_list.py  transcript_search.py  wiki_search.py
server/utils/embeddings/: __init__.py
server/utils/llm/: reasoning.py
server/utils/llm_client/: __init__.py  base.py  client.py  manager.py  utils.py
server/utils/llm_client/providers/: __init__.py  local.py  ollama.py  openai.py
server/utils/mcp/: client.py
server/utils/nlp_tools/: adaptive_refinement.py  document_processing.py  jobs.py  letter.py  reasoning.py  rss.py  summarisation.py  summarization_manager.py  templates.py
server/utils/pdf_forms/: storage.py
server/utils/rag/: chroma.py  chunking_utils.py  fixed_token_chunker.py  processing.py  recursive_token_chunker.py  semantic_chunker.py  vector_store.py
server/utils/rag/backends/: __init__.py  base.py  sqlite_vec.py
server/utils/rag/embeddings/: __init__.py  providers.py
server/utils/transcription/: __init__.py  audio.py  deduplication.py  refinement.py  text.py
src/: App.js  App.jsx  index.css  index.js  index.jsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build-llama.sh  build-parakeet.sh  build-server.sh  build-whisper.sh  build.rs  entitlements.plist  notarize.sh  parakeet-cpp-omi-adapter.patch  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/process-manager/: Cargo.toml
src-tauri/process-manager/src/: ipc.rs  main.rs  process.rs  protocol.rs
src-tauri/src/: commands.rs  encryption.rs  main.rs  pm.rs  pm_client.rs  process.rs  services.rs
src-tauri/src/pm/: tests.rs
src/pages/: ClinicSummary.js  ClinicSummary.jsx  LandingPage.js  LandingPage.jsx  OutstandingJobs.js  OutstandingJobs.jsx  PatientDetails.js  PatientDetails.jsx  Rag.jsx  Settings.js  Settings.jsx
src/theme/: colors.jsx  (+4 more)
(+260 files in other folders)
