[project]
name = "phlox-server"
version = "0.11.0"
requires-python = ">=3.12"
dependencies = [
    "APScheduler==3.11.2",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "json-repair==0.55.0",
    "openai==2.14.0",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    "rapidfuzz==3.14.3",
    "sqlcipher3==0.6.2",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
rag = [
    "chromadb==1.4.0",
    "mcp==1.26.0",
    "numpy==2.4.2",
    "Pillow==12.1.1",
    "PyMuPDF==1.26.7",
    "pypdf==6.8.0",
    "pytesseract==0.3.13",
    "tiktoken==0.12.0",
]
docker = [
    "phlox-server[rag]",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "mypy==1.19.1",
    "bandit[toml]==1.9.4",
    "pre-commit==4.5.1",
]

[dependency-groups]
dev = [
    "nuitka==4.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "mypy==1.19.1",
    "bandit[toml]==1.9.4",
    "pre-commit==4.5.1",
]

[tool.setuptools]
py-modules = []

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "PTH", "SIM", "TCH"]
ignore = ["E501", "B008", "UP007", "SIM108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "server.*"
disallow_untyped_defs = false
warn_return_any = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist"]
