[project]
name = "phlox-server"
version = "1.0.4"
requires-python = ">=3.12"
dependencies = [
    "APScheduler==3.11.2",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "json-repair==0.55.0",
    "openai==2.38.0",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "python-multipart==0.0.27",
    "rapidfuzz==3.14.3",
    "sqlcipher3==0.6.2",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
rag = [
    "chromadb==1.4.0",
    "mcp==1.26.0",
    "numpy==2.4.2",
    "Pillow==12.2.0",
    "PyMuPDF==1.26.7",
    "pypdf==6.10.2",
    "pytesseract==0.3.13",
    "tiktoken==0.12.0",
]
docker = [
    "phlox-server[rag]",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "bandit[toml]==1.9.4",
    "pre-commit==4.5.1",
    "ty==0.0.39",
]

[dependency-groups]
dev = [
    "nuitka==4.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "bandit[toml]==1.9.4",
    "pre-commit==4.5.1",
    "ty==0.0.39",
]

[tool.setuptools]
py-modules = []

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "PTH", "SIM", "TCH"]
ignore = ["E501", "B008", "UP007", "SIM108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = ".venv"
extra-paths = [".."]

[tool.ty.analysis]
replace-imports-with-any = [
    "sqlcipher3.**",
    "tiktoken.**",
    "pytesseract.**",
    "pypdf.**",
    "PIL.**",
    "huggingface_hub.**",
    "fitz.**",
    "llama_cpp.**",
    "chromadb.**",
    "mcp.**",
    "numpy.**",
]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist"]

[tool.uv]
exclude-newer = "7 days"
