[workspace]
members = ["process-manager"]
resolver = "2"

[package]
name = "phlox"
version = "0.9.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
phlox-pm = { path = "process-manager" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4.0"
sysinfo = "0.30"

log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta.7", features = [
    "colored",
    "tracing",
] } # Or check for a version compatible with Tauri 2.5.1

# Encryption dependencies (minimal - just hex encoding)
hex = "0.4"
thiserror = "2"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading"] }

[[bin]]
name = "phlox"
path = "src/main.rs"
