[workspace]
resolver = "2"

[package]
name = "phlox"
version = "2.0.0"
description = "Open-source AI scribe with patient management"
authors = ["bloodworks-io"]
license = "MIT"
repository = "https://github.com/bloodworks-io/phlox"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4.0"
sysinfo = "0.30"

log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta.7", features = [
    "colored",
    "tracing",
] } # Or check for a version compatible with Tauri 2.5.1

# Encryption dependencies (minimal - just hex encoding)
hex = "0.4"
thiserror = "2"


[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSColor",
    "NSButton",
    "NSControl",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSGeometry",
    "objc2-core-foundation",
] }

[target."cfg(unix)".dependencies]
libc = "0.2"


[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }

[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console"] }

[[bin]]
name = "phlox"
path = "src/main.rs"
